--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -4,13 +4,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
   <link rel="stylesheet" th:href="@{/_header.css}">
   <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm"> <a href="#" class="navbar-brand font-weight-bold d-block d-lg-none">MegaMenu</a> <button type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"> <span class="navbar-toggler-icon"></span> </button>
     <div id="navbarContent" class="collapse navbar-collapse">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item"><a href="/hotel/home" class="nav-link font-weight-bold text-uppercase">Hotels</a></li>
-        <li class="nav-item"><a href="/" class="nav-link font-weight-bold text-uppercase" ><strong>BoopRincGo</strong></a></li>
+        <li class="nav-item"><a href="/" class="nav-link font-weight-bold text-uppercase" ><strong>BoopRinc</strong></a></li>
         <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">About</a></li>
       </ul>
     </div>
