--- a/src/main/resources/templates/_previewHeader.html
+++ b/src/main/resources/templates/_previewHeader.html
@@ -9,8 +9,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm"> <a href="#" class="navbar-brand font-weight-bold d-block d-lg-none">MegaMenu</a> <button type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"> <span class="navbar-toggler-icon"></span> </button>
         <div id="navbarContent" class="collapse navbar-collapse">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a th:href="@{/hotel/home/{currentPage}(currentPage=${1})}" class="nav-link font-weight-bold text-uppercase">Hotels</a></li>
-                <li class="nav-item"><a href="/" class="nav-link font-weight-bold text-uppercase" ><strong>BoopRincGo</strong></a></li>
+                <li class="nav-item"><a href="/hotel/home" class="nav-link font-weight-bold text-uppercase">Hotels</a></li>
+                <li class="nav-item"><a href="/" class="nav-link font-weight-bold text-uppercase" ><strong>BoopRinc</strong></a></li>
                 <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">About</a></li>
             </ul>
         </div>
@@ -19,7 +19,7 @@
         <div class="container py-4">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <h1 class="display-4">BoopRincGo</h1>
+                    <h1 class="display-4">BoopRinc</h1>
                 </div>
             </div>
             <div class="row pt-5">
