--- a/src/main/resources/templates/hotel/personal.html
+++ b/src/main/resources/templates/hotel/personal.html
@@ -1,10 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Personal</title>
+    <link rel="stylesheet" th:href="@{/personal.css}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet' href='https://sachinchoolur.github.io/lightslider/dist/css/lightslider.css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <script>
+        $('.datepicker').datepicker({
+            inline: true
+        });
+    </script>
 </head>
 <body>
+<div th:replace="_header :: content"></div>
+<div class="container-fluid mt-2 mb-3">
+    <div class="row no-gutters">
+        <div class="col-md-5 pr-2">
+            <div class="card">
+                <div class="demo">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item" th:each="photo: ${hotel.imageUrls}" th:classappend ="${photoStat.first} ? active : ''">
+                                <img class="d-block w-100" th:src="${photo}" width="Npx" height="auto">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="card mt-2">
+                <h6>Reviews</h6>
+                <div class="d-flex flex-row">
+                    <div class="stars"><i class="bi bi-star"></i></div>
+                    <span class="ml-1 font-weight-bold" th:text="${hotel.rating}"></span>
+                </div>
+                <hr>
+                <div class="badges"><span class="badge bg-dark ">All (230)</span> <span class="badge bg-dark "> <i
+                        class="fa fa-image"></i> 23 </span> <span class="badge bg-dark "> <i
+                        class="fa fa-comments-o"></i> 23 </span> <span class="badge bg-warning"> <i
+                        class="bi bi-star"></i> <i class="bi-bi-star"></i> <i class="bi bi-star"></i> <i
+                        class="bi bi-star"></i> <span class="ml-1">2,123</span> </span></div>
+                <hr>
+                <div class="comment-section">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex flex-row align-items-center"><img src="https://i.imgur.com/o5uMfKo.jpg"
+                                                                             class="rounded-circle profile-image">
+                            <div class="d-flex flex-column ml-1 comment-profile">
+                                <div class="comment-ratings"><i class="bi bi-star"></i> <i class="bi bi-star"></i> <i
+                                        class="bi bi-star"></i> <i class="bi bi-star"></i></div>
+                                <span class="username">Lori Benneth</span>
+                            </div>
+                        </div>
+                        <div class="date"><span class="text-muted">2 May</span></div>
+                    </div>
+                    <hr>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex flex-row align-items-center"><img src="https://i.imgur.com/tmdHXOY.jpg"
+                                                                             class="rounded-circle profile-image">
+                            <div class="d-flex flex-column ml-1 comment-profile">
+                                <div class="comment-ratings"><i class="bi bi-star"></i> <i class="bi bi-star"></i> <i
+                                        class="bi bi-star"></i> <i class="bi bi-star"></i></div>
+                                <span class="username">Timona Simaung</span>
+                            </div>
+                        </div>
+                        <div class="date"><span class="text-muted">12 May</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-7">
+            <div class="card">
+                <div class="d-flex flex-row align-items-center">
+                    <div class="p-ratings"><i class="bi bi--star"></i> <i class="bi bi-star"></i> <i
+                            class="bi bi--star"></i> <i class="bi bi--star"></i></div>
+                    <span class="ml-1" th:text="${hotel.rating}"></span>
+                </div>
+                <div class="about"><span class="font-weight-bold"> [[${hotel.name}]]</span>
+                    <h4 class="font-weight-bold">[[${rooms.get(0).cost}]]</h4>
+                </div>
+                <hr>
+                <div class="product-description">
+                    <div class="mt-2"><span class="font-weight-bold">Description</span>
+                        <!--                        <p th:text="${hotel.description}"></p>-->
+                        <p>The minimalist collaboration features chairs, lightening, Shelves, Sofas, Desks and various
+                            home accessories, all offering form and function at the same point.We use high-strength
+                            clamps and joinery techniques specially designed for engineered wood beds. Ergo, no irksome
+                            creaks - and you can sleep like a baby, well into adulthood!</p>
+                        <div class="bullets" th:each="favor:${favors}">
+                            <div class="d-flex align-items-center"><span class="dot"></span> <span class="bullet-text">[[${favor.name}]]</span>
+                            </div>
+                        </div>
+                        <div class="bullets">
+                            <div class="d-flex align-items-center"><span class="dot"></span> <span class="bullet-text">Non-smoking rooms</span>
+                            </div>
+                            <div class="d-flex align-items-center"><span class="dot"></span> <span class="bullet-text">Airport shuttle</span>
+                            </div>
+                            <div class="d-flex align-items-center"><span class="dot"></span> <span class="bullet-text">Restaurant</span>
+                            </div>
+                            <div class="d-flex align-items-center"><span class="dot"></span> <span class="bullet-text">Room service</span>
+                            </div>
+                            <div class="d-flex align-items-center"><span class="dot"></span> <span class="bullet-text"> WiFi in all areas</span>
+                            </div>
+                            <div class="d-flex align-items-center"><span class="dot"></span> <span class="bullet-text">Parking</span>
+                            </div>
+                            <div class="d-flex align-items-center"><span class="dot"></span> <span class="bullet-text">Bar</span>
+                            </div>
+                            <div class="d-flex align-items-center"><span class="dot"></span> <span class="bullet-text">Good Breakfast</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mt-2"><span class="font-weight-bold">Rooms</span>
+                <div class="similar-products mt-2 d-flex flex-row">
+                    <table class="table">
+                        <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Type</th>
+                            <th scope="col">Number of beds</th>
+                            <th scope="col">Cost</th>
+                            <th scope="col"></th>
+                        </tr>
+                        </thead>
+                        <tbody th:each="room:${rooms}">
+                        <tr>
+                            <td th:text="${room.type}"></td>
+                            <td th:text="${room.numberOfBeds}"></td>
+                            <td th:text="${room.cost}"></td>
+                            <td>
+                                <a th:href="@{'/user/order/' + ${hotel.id} + '/' + ${room.id}}" class="btn btn-outline-secondary" role="button"
+                                   aria-pressed="true">Order</a>
+                            </td>
+                        </tr>
 
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
+<script src='https://sachinchoolur.github.io/lightslider/dist/js/lightslider.js'></script>
+<script>
+    $('#lightSlider').lightSlider({
+        gallery: true,
+        item: 1,
+        loop: true,
+        slideMargin: 0,
+        thumbItem: [[${hotel.imageUrls.size()}]]
+    });
+</script>
 </body>
 </html>
