--- a/src/main/resources/templates/homeHotel.html
+++ b/src/main/resources/templates/homeHotel.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" th:href="@{/home.css}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
-
         $('.datepicker').datepicker({
             inline: true
         });
     </script>
 </head>
 <body>
-
 <div th:replace="_header :: content"></div>
 <div class="row" style="max-width: 1519px">
     <div class="col-md-3">
@@ -25,12 +23,15 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form>
+            <form action="#" th:action="@{/hotel/setDate}" th:object="${datePeriod}" th:method="post">
                 <div class="form-group">
-                    <input type="date" class="form-control">
+                    <input type="date" class="form-control" th:field="*{checkInDate}">
                 </div>
                 <div class="form-group">
-                    <input type="date" class="form-control">
+                    <input type="date" class="form-control" th:field="*{checkOutDate}">
+                </div>
+                <div class="text-right refine">
+                    <button class="btn btn-out btn-primary btn-square" id="button-date">Refine Search</button>
                 </div>
             </form>
             <form action="#" th:action="@{/hotel/filter}" th:object="${filterHotels}" th:method="post">
@@ -259,7 +260,8 @@
                                         </ul>
                                         <ul class="list-inline small">
                                             <li th:text="'number home: ' + ${hotel.home}"></li>
-                                            <li th:text="'telephone: ' + ${hotel.phoneNumber}"></li></ul>
+                                            <li th:text="'telephone: ' + ${hotel.phoneNumber}"></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
