--- a/src/main/resources/templates/hotel/personal.html
+++ b/src/main/resources/templates/hotel/personal.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <title>Personal</title>
     <link rel="stylesheet" th:href="@{/personal.css}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='https://sachinchoolur.github.io/lightslider/dist/css/lightslider.css'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- jquery JS -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
+    <!-- Bootstrap js -->
+    <script type="text/javascript"
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+    <!-- Propeller textfield js -->
+    <script type="text/javascript" src="dist/js/propeller.min.js"></script>
+
+    <!-- Datepicker moment with locales -->
+    <script type="text/javascript" language="javascript" src="datetimepicker/js/moment-with-locales.js"></script>
+
+    <!-- Propeller Bootstrap datetimepicker -->
+    <script type="text/javascript" language="javascript" src="datetimepicker/js/bootstrap-datetimepicker.js"></script>
+
     <script>
         $('.datepicker').datepicker({
             inline: true
@@ -22,15 +38,18 @@
                 <div class="demo">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item" th:each="photo: ${hotel.imageUrls}" th:classappend ="${photoStat.first} ? active : ''">
+                            <div class="carousel-item" th:each="photo: ${hotel.imageUrls}"
+                                 th:classappend="${photoStat.first} ? active : ''">
                                 <img class="d-block w-100" th:src="${photo}" width="Npx" height="auto">
                             </div>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                           data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                           data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
@@ -120,6 +139,23 @@
                     </div>
                 </div>
             </div>
+            <div class="card mt-2">
+                <div class="row">
+                    <form action="#" th:action="@{}"
+                    <div class="col-sm-6">
+                        <div class="form-group pmd-textfield pmd-textfield-floating-label">
+                            <label class="control-label" for="datepicker-start">Start Date</label>
+                            <input type="date" id="datepicker-start" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group pmd-textfield pmd-textfield-floating-label">
+                            <label class="control-label" for="datepicker-end">End Date</label>
+                            <input type="date" id="datepicker-end" class="form-control">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="card mt-2"><span class="font-weight-bold">Rooms</span>
                 <div class="similar-products mt-2 d-flex flex-row">
                     <table class="table">
@@ -137,7 +173,8 @@
                             <td th:text="${room.numberOfBeds}"></td>
                             <td th:text="${room.cost}"></td>
                             <td>
-                                <a th:href="@{'/user/order/' + ${hotel.id} + '/' + ${room.id}}" class="btn btn-outline-secondary" role="button"
+                                <a th:href="@{'/user/order/' + ${hotel.id} + '/' + ${room.id}}"
+                                   class="btn btn-outline-secondary" role="button"
                                    aria-pressed="true">Order</a>
                             </td>
                         </tr>
